...
        Scaffold(
            topBar = {
                TopAppBar(
                    title = { Text(topBarTitle) },
                    navigationIcon = {
                        IconButton(
                            modifier = Modifier.semantics { contentDescription = "Abrir menu hamburguer" },
                            enabled = !isNavigationLocked,
                            onClick = { scope.launch { drawerState.open() } }
                        ) {
                            Icon(Icons.Outlined.Menu, contentDescription = "Menu")
                        }
                    },
                    actions = {
                        IconButton(
                            modifier = Modifier.semantics { contentDescription = "Ir para tela inicial" },
                            enabled = !isNavigationLocked,
                            onClick = { navigateOrClose(AppDestination.Home.route) }
                        ) {
                            Icon(Icons.Outlined.Home, contentDescription = "Home")
                        }
                    },
...
